--- a/css/contacts.scss
+++ b/css/contacts.scss
@@ -1,38 +1,85 @@
+@import 'colors';
+@import 'main';
+@import 'header';
+@import 'footer';
 
-*{
+
+* {
     box-sizing: border-box;
 }
-body, html{
+
+body,
+html {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
 }
-.section-1{
+
+.section-1 {
     display: grid;
-    height: 100%;
+    width: 100%;
+    height: 500px;
     grid-template: repeat(1, 1fr) / repeat(7, 1fr);
 
-    &__box-1{
+
+    &__box-1 {
         grid-column: 1 / 5;
-        height: 100%;
+        height: 50%;
         display: inherit;
         grid-template: repeat(4, 1fr) / repeat(1, 1fr);
-        &__box-2{
+
+        h1 {
+            font-size: 2.5em;
+        }
+
+        &__box-2 {
             grid-row: 2 / 5;
         }
     }
-    &__box-2{
-       grid-column: 6 / 8;
-       height: 100%;
 
-       form{
+    &__box-2 {
+        grid-column: 5 / 8;
         height: 100%;
-       }
+
+        form {
+            height: 50%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+
+            input {
+                border: none;
+                border-bottom: 1px solid black;
+                height: 50px;
+            }
+
+            .button-container {
+                display: flex;
+                align-items: center;
+                height: 50px;
+
+                button {
+                    height: 100%;
+                    width: 100px;
+                    border: none;
+                    background-color: $genesis-blue;
+                    color: #fff;
+                }
+            }
+
+        }
     }
 }
 
-.section-2{
+.section-2 {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+
+    img {
+        width: 100%;
+    }
+
 }
