--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,3 +1,5 @@
+@import 'clean-code';
+
 header {
     height: 10%;
 
@@ -10,12 +12,9 @@ header {
 
         &__box-1 {
             grid-column: 2 / 4;
-            display: grid;
-            justify-content: flex-start;
-            align-items: center;
+            @include flexdisplay(flex-start, center);
             h3{
-                padding: 0;
-                margin: 0;
+                @include padmar();
             }
 
         }
@@ -24,19 +23,14 @@ header {
             grid-column: 8 / 10;
 
             ul {
-                display: flex;
+                @include flexdisplay(space-around, center);
                 flex-direction: row;
                 list-style-type: none;
-                justify-content: space-around;
-                align-items: center;
-                height: 100%;
-                width: 100%;
-                padding: 0;
-                margin: 0;
+                @include area(100%, 100%);
+                @include padmar();
 
                 li {
                     margin-left: 15px;
-                    ;
                 }
             }
         }
