--- a/css/contacts.css
+++ b/css/contacts.css
@@ -13,6 +13,23 @@ main {
   margin: 0 auto;
 }
 
+a {
+  text-decoration: none;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body,
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 header {
   height: 10%;
 }
@@ -69,8 +86,9 @@ header .nav__box-1 {
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
   grid-column: 2/4;
-  display: -ms-grid;
-  display: grid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
@@ -79,8 +97,8 @@ header .nav__box-1 {
           align-items: center;
 }
 header .nav__box-1 h3 {
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 header .nav__box-2 {
   -ms-grid-column: 8;
@@ -91,23 +109,40 @@ header .nav__box-2 ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  list-style-type: none;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  list-style-type: none;
   width: 100%;
-  padding: 0;
+  height: 100%;
   margin: 0;
+  padding: 0;
 }
 header .nav__box-2 ul li {
   margin-left: 15px;
+}
+
+a {
+  text-decoration: none;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body,
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 footer {
@@ -143,15 +178,15 @@ footer .anchortags ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   list-style-type: none;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  padding: 0;
   margin: 0;
+  padding: 0;
   height: 100%;
 }
 footer .social-media {
@@ -161,16 +196,20 @@ footer .social-media {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   list-style-type: none;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  padding: 0;
   margin: 0;
+  padding: 0;
   height: 100%;
+}
+
+a {
+  text-decoration: none;
 }
 
 * {
@@ -204,6 +243,7 @@ html {
   -ms-grid-rows: (1fr)[4];
   -ms-grid-columns: (1fr)[1];
       grid-template: repeat(4, 1fr)/repeat(1, 1fr);
+  margin-right: 10px;
 }
 .section-1__box-1 h1 {
   font-size: 2.5em;
@@ -220,7 +260,7 @@ html {
   height: 100%;
 }
 .section-1__box-2 form {
-  height: 50%;
+  height: 40%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -247,14 +287,15 @@ html {
   height: 50px;
 }
 .section-1__box-2 form .button-container button {
-  height: 100%;
   width: 100px;
+  height: 100%;
   border: none;
   background-color: #4A4FF2;
   color: #fff;
 }
 
 .section-2 {
+  margin-top: 50px;
   width: 100%;
   height: 100%;
   display: -webkit-box;
