--- a/css/index.scss
+++ b/css/index.scss
@@ -1,10 +1,10 @@
 @import 'header';
 @import 'footer';
 @import 'colors';
+@import 'clean-code';
+@import 'main';
 
-* {
-    box-sizing: border-box;
-}
+
 
 @mixin display($n) {
     display: $n;
@@ -12,33 +12,24 @@
 
 
 
-a{
-    text-decoration: none;
-}
-
-body,
-html {
-    width: 100%;
-    height: 100%;
-}
 
 
-@import 'main';
+
+
 
 .section-1 {
-    height: 250px;
-    width: 100%;
+    @include area(100%, 250px);
     @include display(grid);
     grid-template: repeat(1, 1fr) / repeat(3, 1fr);
     margin-bottom: 100px;
 
     &__box-1 {
         grid-column: 1 / 3;
-        @include display(inherit);
+        display: inherit;
         grid-template: repeat(3, 1fr) / repeat(1, 1fr);
 
         &__grid-box-1 {
-            @include display(flex);
+            display: flex;
             align-items: flex-end;
 
             p {
@@ -50,9 +41,7 @@ html {
         &__grid-box-2 {
             grid-row: 2 / 4;
 
-            @include display(flex);
-            justify-content: center;
-            align-items: center;
+            @include flexdisplay(center, center);
 
             h1 {
                 font-size: 2em;
@@ -66,13 +55,12 @@ html {
     }
 
     &__box-2 {
-        @include display(flex);
+        display: flex;
         align-items: flex-end;
 
         .mini-container {
             .line {
-                width: 30px;
-                height: 1px;
+                @include area(30px, 1px);
                 background-color: #979797;
             }
 
@@ -89,11 +77,10 @@ html {
 .section-2 {
     margin: 0 auto;
     height: 1500px;
-    @include display(grid);
+    display: grid;
     grid-template-rows: repeat(14, 1fr);
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
-    margin: 0;
 
     &__img-box-1 {
         grid-row: span 3;
@@ -146,16 +133,14 @@ html {
 
 
     img {
-        width: 100%;
         object-fit: auto;
-        height: 100%;
+        @include area(100%, 100%);
     }
 }
 
 .section-3 {
-    @include display(grid);
-    width: 100%;
-    height: 150px;
+    display: grid;
+    @include area(100%, 150px);
     grid-template: repeat(1, 1fr) / repeat(6, 1fr);
 
     &__box-1 {
@@ -165,12 +150,10 @@ html {
     }
 
     &__box-2 {
-        @include display(flex);
-        align-items: center;
-        justify-content: center;
+        @include flexdisplay(center, center);
 
         ul {
-            @include display(flex);
+            display: flex;
             flex-direction: column;
             justify-content: space-around;
             list-style-type: none;
@@ -181,12 +164,10 @@ html {
     }
 
     &__box-3 {
-        @include display(flex);
-        align-items: center;
-        justify-content: center;
+        @include flexdisplay(center, center);
 
         ul {
-            @include display(flex);
+            display: flex;
             flex-direction: column;
             justify-content: space-around;
             list-style-type: none;
@@ -197,7 +178,7 @@ html {
 }
 
 .section-4 {
-    @include display(grid);
+    display: grid;
     grid-template: repeat(1, 1fr) / repeat(15, 1fr);
     height: 250px;
     border-top: 1px solid black;
@@ -206,22 +187,21 @@ html {
         grid-column: 1 / 6;
     }
 
+    &__box-2, &__box-3, &__box-4{
+        display: grid;
+        grid-template: repeat(2, 1fr) / repeat(1, 1fr)
+    }
+
     &__box-2 {
         grid-column: 6 / 10;
-        @include display(grid);
-        grid-template: repeat(2, 1fr) / repeat(1, 1fr);
     }
 
     &__box-3 {
         grid-column: 10 / 15;
-        @include display(grid);
-        grid-template: repeat(2, 1fr) / repeat(1, 1fr);
     }
 
     &__box-4 {
         grid-column: 15 / 16;
-        @include display(grid);
-        grid-template: repeat(2, 1fr) / repeat(1, 1fr);
     }
 }
 
@@ -236,22 +216,21 @@ html {
         grid-column: 1 / 6;
     }
 
+    &__box-2, &__box-3, &__box-4{
+        display: grid;
+        grid-template: repeat(2, 1fr) / repeat(1, 1fr)
+    }
+
     &__box-2 {
         grid-column: 6 / 10;
-        @include display(grid);
-        grid-template: repeat(2, 1fr) / repeat(1, 1fr);
     }
 
     &__box-3 {
         grid-column: 10 / 15;
-        @include display(grid);
-        grid-template: repeat(2, 1fr) / repeat(1, 1fr);
     }
 
     &__box-4 {
         grid-column: 15 / 16;
-        @include display(grid);
-        grid-template: repeat(2, 1fr) / repeat(1, 1fr);
     }
 }
 
