--- a/css/projects.css
+++ b/css/projects.css
@@ -1,3 +1,20 @@
+a {
+  text-decoration: none;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body,
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 header {
   height: 10%;
 }
@@ -54,8 +71,9 @@ header .nav__box-1 {
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
   grid-column: 2/4;
-  display: -ms-grid;
-  display: grid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
@@ -64,8 +82,8 @@ header .nav__box-1 {
           align-items: center;
 }
 header .nav__box-1 h3 {
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 header .nav__box-2 {
   -ms-grid-column: 8;
@@ -76,23 +94,40 @@ header .nav__box-2 ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  list-style-type: none;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  list-style-type: none;
   width: 100%;
-  padding: 0;
+  height: 100%;
   margin: 0;
+  padding: 0;
 }
 header .nav__box-2 ul li {
   margin-left: 15px;
+}
+
+a {
+  text-decoration: none;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body,
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 footer {
@@ -128,15 +163,15 @@ footer .anchortags ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   list-style-type: none;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  padding: 0;
   margin: 0;
+  padding: 0;
   height: 100%;
 }
 footer .social-media {
@@ -146,15 +181,15 @@ footer .social-media {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   list-style-type: none;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  padding: 0;
   margin: 0;
+  padding: 0;
   height: 100%;
 }
 
@@ -173,9 +208,21 @@ main {
   margin: 0 auto;
 }
 
+a {
+  text-decoration: none;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+body,
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .section-1 {
@@ -216,11 +263,7 @@ main {
     grid-column: 5/8;
   }
 }
-.section-1__box-2__box-1 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-area: 1/1/1/4;
+.section-1__box-2__box-1, .section-1__box-2__box-2, .section-1__box-2__box-3, .section-1__box-2__box-4, .section-1__box-2__box-5, .section-1__box-2__box-6 .section-1__box-2__box-7, .section-1__box-2__box-8, .section-1__box-2__box-9, .section-1__box-2__box-10, .section-1__box-2__box-11, .section-1__box-2__box-12 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -232,239 +275,90 @@ main {
           align-items: center;
   border-bottom: 1px solid #D8D8D8;
 }
-.section-1__box-2__box-1 p {
+.section-1__box-2__box-1 p, .section-1__box-2__box-2 p, .section-1__box-2__box-3 p, .section-1__box-2__box-4 p, .section-1__box-2__box-5 p, .section-1__box-2__box-6 .section-1__box-2__box-7 p, .section-1__box-2__box-8 p, .section-1__box-2__box-9 p, .section-1__box-2__box-10 p, .section-1__box-2__box-11 p, .section-1__box-2__box-12 p {
   opacity: 0.5;
+}
+.section-1__box-2__box-1 h5, .section-1__box-2__box-2 h5, .section-1__box-2__box-3 h5, .section-1__box-2__box-4 h5, .section-1__box-2__box-5 h5, .section-1__box-2__box-6 .section-1__box-2__box-7 h5, .section-1__box-2__box-8 h5, .section-1__box-2__box-9 h5, .section-1__box-2__box-10 h5, .section-1__box-2__box-11 h5, .section-1__box-2__box-12 h5 {
+  margin: 0;
+  padding: 0;
+  text-wrap: nowrap;
+}
+@media (max-width: 780px) {
+  .section-1__box-2__box-1 h5, .section-1__box-2__box-2 h5, .section-1__box-2__box-3 h5, .section-1__box-2__box-4 h5, .section-1__box-2__box-5 h5, .section-1__box-2__box-6 .section-1__box-2__box-7 h5, .section-1__box-2__box-8 h5, .section-1__box-2__box-9 h5, .section-1__box-2__box-10 h5, .section-1__box-2__box-11 h5, .section-1__box-2__box-12 h5 {
+    text-wrap: wrap;
+  }
+}
+.section-1__box-2__box-1 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: 1/1/1/4;
 }
 .section-1__box-2__box-2 {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-area: 2/1/2/4;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid #D8D8D8;
-}
-.section-1__box-2__box-2 p {
-  opacity: 0.5;
 }
 .section-1__box-2__box-3 {
   -ms-grid-row: 3;
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-area: 3/1/3/4;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid #D8D8D8;
-}
-.section-1__box-2__box-3 p {
-  opacity: 0.5;
 }
 .section-1__box-2__box-4 {
   -ms-grid-row: 4;
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-area: 4/1/4/4;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid #D8D8D8;
-}
-.section-1__box-2__box-4 p {
-  opacity: 0.5;
 }
 .section-1__box-2__box-5 {
   -ms-grid-row: 5;
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-area: 5/1/5/4;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid #D8D8D8;
-}
-.section-1__box-2__box-5 p {
-  opacity: 0.5;
 }
 .section-1__box-2__box-6 {
   -ms-grid-row: 6;
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-area: 6/1/6/4;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid #D8D8D8;
-}
-.section-1__box-2__box-6 p {
-  opacity: 0.5;
 }
 .section-1__box-2__box-7 {
   -ms-grid-row: 1;
   -ms-grid-column: 4;
   -ms-grid-column-span: 3;
   grid-area: 1/4/1/7;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid #D8D8D8;
-}
-.section-1__box-2__box-7 h5 {
-  padding: 0;
-  margin: 0;
-  text-wrap: nowrap;
 }
 .section-1__box-2__box-8 {
   -ms-grid-row: 2;
   -ms-grid-column: 4;
   -ms-grid-column-span: 3;
   grid-area: 2/4/2/7;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid #D8D8D8;
-}
-.section-1__box-2__box-8 h5 {
-  padding: 0;
-  margin: 0;
-  text-wrap: nowrap;
-}
-@media (max-width: 780px) {
-  .section-1__box-2__box-8 h5 {
-    text-wrap: wrap;
-  }
 }
 .section-1__box-2__box-9 {
   -ms-grid-row: 3;
   -ms-grid-column: 4;
   -ms-grid-column-span: 3;
   grid-area: 3/4/3/7;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid #D8D8D8;
-}
-.section-1__box-2__box-9 h5 {
-  padding: 0;
-  margin: 0;
-  text-wrap: nowrap;
 }
 .section-1__box-2__box-10 {
   -ms-grid-row: 4;
   -ms-grid-column: 4;
   -ms-grid-column-span: 3;
   grid-area: 4/4/4/7;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid #D8D8D8;
-}
-.section-1__box-2__box-10 h5 {
-  padding: 0;
-  margin: 0;
-  text-wrap: nowrap;
-}
-@media (max-width: 780px) {
-  .section-1__box-2__box-10 h5 {
-    text-wrap: wrap;
-  }
 }
 .section-1__box-2__box-11 {
   -ms-grid-row: 5;
   -ms-grid-column: 4;
   -ms-grid-column-span: 3;
   grid-area: 5/4/5/7;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid #D8D8D8;
-}
-.section-1__box-2__box-11 h5 {
-  padding: 0;
-  margin: 0;
-  text-wrap: nowrap;
 }
 .section-1__box-2__box-12 {
   -ms-grid-row: 6;
   -ms-grid-column: 4;
   -ms-grid-column-span: 3;
   grid-area: 6/4/6/7;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid #D8D8D8;
-}
-.section-1__box-2__box-12 h5 {
-  padding: 0;
-  margin: 0;
-  text-wrap: nowrap;
 }
 
 .section-2 {
@@ -484,26 +378,9 @@ main {
   width: 100%;
   gap: 10px;
 }
-.section-3__box-1 img {
-  width: 100%;
+.section-3__box-1 img, .section-3__box-2 img, .section-3__box-3 img {
   -o-object-fit: auto;
      object-fit: auto;
-  height: 100%;
-}
-.section-3__box-2 img {
   width: 100%;
-  -o-object-fit: auto;
-     object-fit: auto;
   height: 100%;
-}
-.section-3__box-3 img {
-  width: 100%;
-  -o-object-fit: auto;
-     object-fit: auto;
-  height: 100%;
-}
-
-body, html {
-  height: 100%;
-  width: 100%;
 }
