--- a/css/projects.scss
+++ b/css/projects.scss
@@ -2,9 +2,8 @@
 @import 'footer';
 @import 'main';
 @import 'colors';
-*{
-    box-sizing: border-box;
-}
+@import 'clean-code';
+
 
 
 
@@ -29,143 +28,73 @@
             grid-column: 5 / 8;
         }
 
-        &__box-1{
-            grid-area: 1 / 1 / 1 / 4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        &__box-1,  &__box-2,  &__box-3, &__box-4, &__box-5, &__box-6 &__box-7, &__box-8, &__box-9, &__box-10, &__box-11, &__box-12{
+            @include flexdisplay(center, center);
             border-bottom: 1px solid $genesis-gray;
             p{
                 opacity: 0.5;
             }
+
+            h5{
+                
+                @include padmar();
+                text-wrap: nowrap;
+                @media (max-width: 780px){
+                    text-wrap: wrap;
+                }
+
+            }
+        }
+
+
+        &__box-1{
+            grid-area: 1 / 1 / 1 / 4;
+           
         }
         &__box-2{
             grid-area: 2 / 1 / 2 / 4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 1px solid $genesis-gray;
-            p{
-                opacity: 0.5;
-            }
+            
         }
         &__box-3{
             grid-area: 3 / 1 / 3 / 4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 1px solid $genesis-gray;
-            p{
-                opacity: 0.5;
-            }
+           
         }
         &__box-4{
             grid-area: 4 / 1 / 4 / 4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 1px solid $genesis-gray;
-            p{
-                opacity: 0.5;
-            }
+           
         }
         &__box-5{
             grid-area: 5 / 1 / 5 / 4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 1px solid $genesis-gray;
-            p{
-                opacity: 0.5;
-            }
+           
         }
         &__box-6{
             grid-area: 6 / 1 / 6 / 4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 1px solid $genesis-gray;
-            p{
-                opacity: 0.5;
-            }
+            
         }
+
         &__box-7{
             grid-area: 1 / 4 / 1 / 7;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 1px solid $genesis-gray;
-            h5{
-                padding: 0;
-                margin: 0;
-                text-wrap: nowrap;
-            }
+            
         }
         &__box-8{
             grid-area: 2 / 4 / 2 / 7;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 1px solid $genesis-gray;
-            h5{
-                padding: 0;
-                margin: 0;
-                text-wrap: nowrap;
-                @media (max-width: 780px){
-                    text-wrap: wrap;
-                }
-            }
+            
         }
         &__box-9{
             grid-area: 3 / 4 / 3 / 7;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 1px solid $genesis-gray;
-            h5{
-                padding: 0;
-                margin: 0;
-                text-wrap: nowrap;
-            }
+           
         }
         &__box-10{
             grid-area: 4 / 4 / 4 / 7;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 1px solid $genesis-gray;
-            h5{
-                padding: 0;
-                margin: 0;
-                text-wrap: nowrap;
-                @media (max-width: 780px){
-                    text-wrap: wrap;
-                }
-            }
+           
         }
         &__box-11{
             grid-area: 5 / 4 / 5 / 7;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 1px solid $genesis-gray;
-            h5{
-                padding: 0;
-                margin: 0;
-                text-wrap: nowrap;
-            }
+           
         }
         &__box-12{
             grid-area: 6 / 4 / 6 / 7;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 1px solid $genesis-gray;
-            h5{
-                padding: 0;
-                margin: 0;
-                text-wrap: nowrap;
-            }
+           
         }
 
     }
@@ -174,8 +103,7 @@
 .section-2{
     width: 100%;
     img{
-        width: 100%;
-        height: 660px;
+        @include area(100%, 660px);
     }
 }
 
@@ -184,30 +112,12 @@
     grid-template: repeat(1, 1fr) / repeat(3, 1fr);
     width: 100%;
     gap: 10px;
-    &__box-1{
+    &__box-1, &__box-2, &__box-3{
         img{
-            width: 100%;
             object-fit: auto;
-            height: 100%;
+            @include area(100%, 100%);
         }
     }
-    &__box-2{
-        img{
-            width: 100%;
-            object-fit: auto;
-            height: 100%;
-        }
-    }
-    &__box-3{
-        img{
-            width: 100%;
-            object-fit: auto;
-            height: 100%;
-        }
-    }
+    
 }
 
-body, html{
-    height: 100%;
-    width: 100%;
-}
