--- a/css/_clean-code.scss
+++ b/css/_clean-code.scss
@@ -1,5 +1,11 @@
+@import 'colors';
 a{
     text-decoration: none;
+
+    transition: all 0.5s ease-in;
+    &:hover{
+        color: $genesis-blue;
+    }
 }
 
 *{
