--- a/css/projects.css
+++ b/css/projects.css
@@ -1,5 +1,10 @@
 a {
   text-decoration: none;
+  -webkit-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+}
+a:hover {
+  color: #4A4FF2;
 }
 
 * {
@@ -115,6 +120,12 @@ header .nav__box-2 ul li {
 
 a {
   text-decoration: none;
+  -webkit-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+}
+
+a:hover {
+  color: #4A4FF2;
 }
 
 * {
@@ -210,6 +221,11 @@ main {
 
 a {
   text-decoration: none;
+  -webkit-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+}
+a:hover {
+  color: #4A4FF2;
 }
 
 * {
